Changes to content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2148,6 +2148,7 @@ footer .wrap-social ul li a {
   line-height: 28px;
   margin-right: 36px;
   text-decoration: none;
+  padding: 4px;
 }
 
 /*-------------------------------------------------*/
